src/objects/Location.object
<CustomObject>
    <fields>
        <fullName>CH_AccountCustomerCompliance__c</fullName>
        <description>NOKIASC-24719: To get Customer Compliance of the Account linked to Location.</description>
        <label>Account Customer Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US_ALTICE</fullName>
                </value>
                <value>
                    <fullName>US_AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>US_Company</fullName>
                </value>
                <value>
                    <fullName>US_Cox</fullName>
                </value>
                <value>
                    <fullName>US_Govern</fullName>
                </value>
                <value>
                    <fullName>US_SCEC</fullName>
                </value>
                <value>
                    <fullName>US_Sprint</fullName>
                </value>
                <value>
                    <fullName>US_T-Mobile</fullName>
                </value>
                <value>
                    <fullName>US_VWireless</fullName>
                </value>
                <value>
                    <fullName>US_VWireline</fullName>
                </value>
                <value>
                    <fullName>NATO</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>unassign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOKIASC-24719: To link an Account to the Location.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Locations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <listViews>
        <fullName>All_Locations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <listViews>
        <fullName>My_Locations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Locations</label>
    </listViews>
    <listViews>
        <fullName>My_Locations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Locations</label>
    </listViews>
    <recordTypes>
        <fullName>CH_Location</fullName>
        <active>true</active>
        <label>CH_Location</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>